2025-02-25T01:03:24Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13511271216 # 576
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-25
* notice: last 14d: unq all: 5 14
* notice: prev accum: outdated-unq outdated-all / unq all: 457 850 / 473 866
* notice: next accum: outdated-unq outdated-all / unq all: 460 853 / 474 867
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-02-10 2025-02-11] / [2025-02-24]

2025-02-24T01:04:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13488779497 # 575
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-24
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 457 850 / 472 865
* notice: next accum: outdated-unq outdated-all / unq all: 457 850 / 473 866
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-02-10 2025-02-23]

2025-02-23T01:06:36Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13478231871 # 574
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-23
* notice: last 14d: unq all: 6 15
* notice: prev accum: outdated-unq outdated-all / unq all: 456 849 / 472 865
* notice: next accum: outdated-unq outdated-all / unq all: 457 850 / 472 865
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-02-09] / []

2025-02-22T01:00:15Z: