@@ -1,18 +1,18 @@
 {
-  "timestamp" : "2025-02-25T01:03:24Z",
+  "timestamp" : "2025-02-26T01:03:17Z",
   "count_outdated" : 853,
   "uniques_outdated" : 460,
-  "count" : 867,
-  "uniques" : 474,
+  "count" : 868,
+  "uniques" : 475,
   "clones" : [
     {
       "timestamp": "2025-02-12T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "count": 1,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 1, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 1, 2 ]
     },
     {
       "timestamp": "2025-02-13T00:00:00Z",
@@ -97,6 +97,15 @@
     },
     {
       "timestamp": "2025-02-24T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2025-02-25T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
