@@ -1,3 +1,12 @@
+2025-02-26T01:03:17Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13534212119 # 577
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-26
+* notice: last 14d: unq all: 5 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 460 853 / 474 867
+* notice: next accum: outdated-unq outdated-all / unq all: 460 853 / 475 868
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2025-02-12 2025-02-25]
+
 2025-02-25T01:03:24Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/13511271216 # 576
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-02-25
